[workspace]
members = ["plugin_test"]
resolver = "2"

[package]
name = "servers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.57"
clap = { version = "3.2.17", features = ["derive"] }
libloading = "0.7.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tungstenite = "0.17.3"
futures = "0.3.21"
lazy_static = "1.4.0"
