[workspace]
members = ["plugin_test"]
resolver = "2"

[package]
name = "servers"
description = "TCP and WebSocket server for Clients written in Rust"
homepage = "https://github.com/MedzikUser/servers"
repository = "https://github.com/MedzikUser/servers.git"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.61"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.57"
clap = { version = "3.2.17", features = ["derive"] }
libloading = "0.7.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tungstenite = "0.17.3"
futures = "0.3.23"
lazy_static = "1.4.0"
