[workspace]
members = ["plugin_test"]
resolver = "2"

[package]
name = "servers"
version = "0.6.0"
description = "TCP and WebSocket server for Clients written in Rust"
homepage = "https://github.com/MedzikUser/servers"
repository = "https://github.com/MedzikUser/servers.git"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.58"
clap = { version = "3.2.23", features = ["derive"] }
libloading = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tungstenite = "0.17.3"
futures = "0.3.25"
lazy_static = "1.4.0"
